--- a/trabalhorec.html
+++ b/trabalhorec.html
@@ -46,11 +46,12 @@
 
 <ul>
 <li class="right">
+    <form class="" type="text" action="" method="get">
 		<input value="" name="email" class="required email" id="mce-EMAIL" placeholder="Email Address" type="email">
 		<input value="http://thecodeplayer.com/?sendy=" name="redirect_url" type="hidden">
 		<input value="30" name="list_id" type="hidden">
 		<input value="47069534ef30396a21afa2c672a089ab" name="hash" type="hidden">
-		<button>&rarr;</button></li>
+		<button>&rarr;</button></li></form>
 </ul>
 </div>
    
